# metal-cpp-tutorial-clang

./: .gitignore  CMakeLists.txt  README.md  build.sh
.zed/: settings.json  tasks.json
dependencies/AAPLMathUtilities/: AAPLMathUtilities.cpp  AAPLMathUtilities.h
dependencies/metal-cpp-extensions/AppKit/: AppKitPrivate.hpp  NSView.hpp  NSWindow.hpp
src/: main.cpp  mtl_engine.cpp  mtl_engine.hpp  mtl_implementation.cpp  texture.cpp  texture.hpp  vertex_data.hpp
src/shaders/: cube.metal  light.metal  obj.metal  sphere.metal  square.metal  triangle.metal
